# libgens-sonicglvl

src/: libgens-sonicglvl.sln
src/LibGens/: Error.cpp  File.cpp  MathGens.cpp
src/LibS06/: S06DAE.cpp  S06Set.cpp  S06XnFile.cpp  S06XnFile.h  S06XnMotion.cpp
src/xndae/: CMakeLists.txt  main.cpp  xndae.vcxproj
